# flight_booking

./: .gitignore
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
backend/crud/: database.py  users.py
backend/external_services/: email.py  flight.py
backend/models/: users.py
backend/routers/: flights.py  users.py
backend/schemas/: flight_order.py  flight_price_confirm.py  flight_search.py  flights.py  users.py
backend/tests/: test_bookings.py
backend/utils/: security.py
